--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
- <script src="script.js">   </script>   
-</body>
+  </head>
+  <body>
+    <button class="btn1">ROCK</button>
+    <button class="btn2">PAPER</button>
+    <button class="btn3">SCISSOR</button>
+    <p class="result">Result</p>
+    <div class="player">Player Score :<span class="playerScore"> 0</span></div>
+    <div class="computer">
+      Computer Score :<span class="computerScore"> 0</span>
+    </div>
+    <div class="finalResult">Final Result</div>
+    <script src="script.js"></script>
+  </body>
 </html>
